<resources>
    <string name="app_name">WaterApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nameError">This name is already taken</string>
    <string name="databaseError">Error in getting Database Data</string>
    <string name="databaseSucces">Total plants of this type owned by all users:</string>
    <string name="menu_home">Home</string>
    <string name="menu_information">Information</string>
    <string name="menu_search">Search</string>
    <string name="tip">Random tip</string>
    <string name="tip_of_the_day">Tip of the Day!</string>
    <string name="nextTip"><u>Next Tip</u></string>
    <string name="image_of_plant">Image of plant</string>
    <string name="homeButton">Home</string>
    <string name="searchButton">Search</string>
    <string name="add_new_plant">add new plant</string>
    <string name="home_btn">Home</string>
    <string name="search_btn">Search</string>
    <string name="add_new_plant_btn">Add new plant</string>
    <string name="textview">text</string>

    <string name="plant_name">Personal name for your plant</string>
    <string name="intro_text">Customize your plant or simply add it</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="pot_text">Pot size</string>
    <string name="plant_text">Plant size</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="water">Water</string>
    <string name="delete_a_plant">Delete a plant</string>
</resources>