<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.waterapp.views.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.waterapp.views.InformationFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/information_fragment" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.waterapp.views.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/search_fragment" />
</navigation>